// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListView component component snapshots error 1`] = `
<Container
  className="py-4"
>
  <ListError />
  <ReviewModal />
</Container>
`;

exports[`ListView component component snapshots loaded has data 1`] = `
<Container
  className="py-4"
>
  <React.Fragment>
    <ListViewBreadcrumb />
    <SubmissionsTable />
  </React.Fragment>
  <ReviewModal />
</Container>
`;

exports[`ListView component component snapshots loaded with no data 1`] = `
<Container
  className="py-4"
>
  <EmptySubmission
    courseId="test-course-id"
  />
  <ReviewModal />
</Container>
`;

exports[`ListView component component snapshots loading 1`] = `
<Container
  className="py-4"
>
  <div
    className="w-100 h-100 text-center"
  >
    <Spinner
      animation="border"
      variant="primary"
    />
    <h4>
      <FormattedMessage
        defaultMessage="Loading responses"
        description="loading text for submission response list"
        id="ora-grading.ListView.loadingResponses"
      />
    </h4>
  </div>
  <ReviewModal />
</Container>
`;
